<resources>
    <string name="app_name">Quiz</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="option_4">Option 4</string>
    <string name="your_description">Logo image</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="question">Question here?</string>
    <string name="time_label">Time: %1$d</string>
<string name="question_number">Question %1$d</string>
    <string name="exit">Exit</string>
</resources>