<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tv_quiz"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0C6FB"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="24dp">


    <!-- Timer -->
    <TextView
        android:id="@+id/questionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:textColor="@color/Purple"
        android:textSize="40sp"
        android:textStyle="bold" />



    <TextView
        android:id="@+id/timerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginBottom="12dp"
        android:text="Time: 10"
        android:textColor="@color/Pink"
        android:textSize="21sp"
        tools:ignore="HardcodedText" />

    <!-- Question Text -->
    <TextView
        android:id="@+id/questionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/question"
        android:textColor="#212121"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="HardcodedText" />

    <!-- Options -->
    <Button
        android:id="@+id/option1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:paddingLeft="27dp"
        android:paddingRight="27dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/plum"
        android:text="@string/option_1" />

    <Button
        android:id="@+id/option2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/plum"
        android:text="@string/option_2" />

    <Button
        android:id="@+id/option3"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:paddingLeft="27dp"
        android:paddingRight="27dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/plum"
        android:text="@string/option_3" />

    <Button
        android:id="@+id/option4"
        android:layout_marginBottom="12dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:paddingLeft="27dp"
        android:textColor="@color/white"
        android:paddingRight="27dp"
       android:backgroundTint="@color/plum"
        android:text="@string/option_4" />

</LinearLayout>